Add adjacency list and edge list writers, readers, and round-trip tests
Introduce support for reading and writing adjacency lists and edge lists in the Connected JSON (CJ) format:

- **Writers**: `AdjListWriter`, `EdgeListWriter` to export graphs as adjacency or edge lists.
- **Readers**: Enhance `AdjListReader`, `EdgeListReader` to support node-first order and edge construction with directions.
- **Tests**: Add `AdjListRoundtripTest` and `EdgeListRoundtripTest` to ensure format stability across serialization and parsing.
- Refactor shared parsing logic into `TextEndpoints` to handle endpoint extraction.